--- a/yx/index.html
+++ b/yx/index.html
@@ -148,7 +148,7 @@
                         <a href="../sm/wx-rh.html">入伙</a>
                 </div>
                 <div class="footer-bottom">
-                        <a href="../app/国男大冒险_1.0.1.apk">下载男性游戏APP</a>
+                        <a href="../app/国男大冒险_1.0.1.apk">下载恐怖游戏APP</a>
                 </div>
         </div>
 </body>
