--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -182,6 +182,9 @@
 			{
 				id: 22,
 				content: '带了这么久，你对孩子也有感情了，仍然愿意抚养。但法院判你没资格抚养，最终孩子被生母抢走。',
+   link: [
+					{ str: '男子带娃多年被诉非亲生夺走抚养权', src: 'https://www.baidu.com/s?wd=男子带娃多年被诉非亲生夺走抚养权' },
+				],
 				btnList: [{ txt: '如果能重来...', lastId: 14 }]
 			},
 			{
