--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -128,7 +128,7 @@
 			},
 			{
 				id: 13,
-				content: '你想要孩子，妻子却不想生，直接把孩子给堕了。你起诉离婚，法院却判不准离。<br><br>理由是丈夫不能强迫女性生育，因为男性没有生育权。你郁郁半生，最终断子绝孙。',
+				content: '你想要孩子，妻子却不想生，直接把孩子给堕了。你起诉离婚，法院却判不准离。<br><br>理由是丈夫不能强迫妻子生育，因为男性没有生育权。你郁郁半生，最终断子绝孙。',
 				link: [
 					{ str: '妻子擅自终止妊娠不侵犯丈夫生育权', src: 'https://www.baidu.com/s?wd=妻子擅自终止妊娠是否侵犯丈夫生育权' },
 				],
@@ -136,7 +136,7 @@
 			},
 			{
 				id: 14,
-				content: '你不想要孩子，妻子却想生，于是妻子起诉离婚，法院直接判离。理由是丈夫不得干预女性生育权。<br><br>你不仅丢了老婆，还钱房两失，成了穷光蛋。但经过几年玩命的工作，你又攒够钱娶了媳妇。<br><br>这次你学聪明了，同意要孩子。为了赚钱养家你更加玩命的工作。几年后，孩子长大了，可长得并不像你。你决定：',
+				content: '你不想要孩子，妻子却想生，于是妻子起诉离婚，法院直接判离。理由是丈夫不得干预妻子生育权。<br><br>你不仅丢了老婆，还钱房两失，成了穷光蛋。但经过几年玩命的工作，你又攒够钱娶了媳妇。<br><br>这次你学聪明了，同意要孩子。为了赚钱养家你更加玩命的工作。几年后，孩子长大了，可长得并不像你。你决定：',
 				btnList: [{ txt: '相信妻子', lastId: 15 }, { txt: '偷偷调查', lastId: 16 }, { txt: '先出轨为强', lastId: 17 }]
 			},
 			{
