--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -176,7 +176,7 @@
 			},
 			{
 				id: 21,
-				content: '虽然房子被分走两套，钱也没要回来多少，但至少你不用再为这些糟心事心烦了。你最终还是想开了，增寿三年。',
+				content: '虽然房子被分走两套，钱也没要回多少，但至少你不用再为这些破事心烦了。你最终还是想开了，增寿三年。',
 				btnList: [{ txt: '恭喜通关', btnClass: 'successButton', lastId: 1 }]
 			},
 			{
@@ -202,7 +202,7 @@
 			},
 			{
 				id: 24,
-				content: '由于妻子和第三者在外长期同居，法院判赔偿1.7万抚养费，还不够你调查费的五分之一，你当庭气死。',
+				content: '由于妻子和第三者在外长期同居，法院判她赔偿1.7万抚养费，还不够你调查费的五分之一，你当庭气死。',
 				link: [
 					{ str: '丈夫起诉第三者索赔精神损失费被驳回', src: 'https://www.baidu.com/s?wd=丈夫起诉第三者索赔精神损失费被驳回' },
 				],
