--- a/yx/国男大冒险/index.html
+++ b/yx/国男大冒险/index.html
@@ -5,7 +5,7 @@
 	<link crossorigin="" rel="shortcut icon" type="image/x-icon" href="./img/logo-cf.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" property="og:description" content="请关注公众号：嘲讽">
-	<meta name="keywords" content="国男大冒险|国男模拟器|国男的一生">
+	<meta name="keywords" content="国男大冒险|国男模拟器|国男的一生|小游戏|成人小游戏|国男小游戏">
 	<title>嘲讽 - 国男大冒险经典版</title>
 </head>
 
