--- a/yx/国男大冒险/index.html
+++ b/yx/国男大冒险/index.html
@@ -69,7 +69,7 @@
 			},
 			{
 				id: 2,
-				content: '你打算在宿舍享受一下颓废的生活，于是点了份外卖开始打游戏。<br><br>几轮厮杀后，刚回宿舍的室友问你为什么在食堂对着女生手冲，你感觉有点莫名其妙。<br><br>直到你打开微信，才发现网上到处都是你公然猥亵女生的消息。可你今天根本没出过宿舍。<br><br>几天后，事件源头的女生表示此事纯属虚构，而你早已经社会性死亡。',
+				content: '你打算在宿舍享受一下颓废的生活，于是点了份外卖开始打游戏。<br><br>几轮厮杀后，刚回宿舍的室友问你为什么在食堂对着女生手冲，你感觉有点莫名其妙。<br><br>直到你打开微信，才发现网上到处都是你公然猥亵女生的消息。可你今天根本没出过宿舍。<br><br>几天后，涉事女生表示此事纯属虚构，而你早已经社会性死亡。',
 				link: [
 					{ str: '深圳大学食堂', src: 'https://weibo.com/6239620007/L6iAi5T2l' },
 				],
