--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -197,7 +197,7 @@
 			},
 			{
 				id: 23,
-				content: '你起诉离婚，但被法院驳回，突发脑溢气死，至此断子绝孙。',
+				content: '你起诉离婚，但被法院驳回，突发脑溢血气死，至此断子绝孙。',
 				link: [
 					{ str: '六旬老人发现儿子非亲生起诉离婚被驳', src: 'https://www.baidu.com/s?wd=六旬老人发现儿子非亲生起诉离婚被驳' },
 				],
