--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -226,7 +226,7 @@
 			},
 			{
 				id: 26,
-				content: '你出轨又被发现，妻子起诉离婚，法院判离婚，除去抚养费，你还要净身出户、赔妻子精神损失费。',
+				content: '你出轨又被发现，妻子起诉离婚，法院判离，除去抚养费，你还要净身出户、赔妻子精神损失费。',
 				link: [
 					{ str: '丈夫出轨妻子获精神损害赔偿12万', src: 'https://www.baidu.com/s?wd=丈夫出轨妻子获精神损害赔偿12万' },
 				],
