--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -326,6 +326,9 @@
 		background-image: linear-gradient(rgba(255, 255, 255, 0.09) 74%, rgba(0, 156, 238, 0.3));
 		position: relative;
 		overflow: auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.title_button {
@@ -390,6 +393,8 @@
 		flex-direction: column;
 		align-items: center;
 		margin: 40px;
+		max-height: 90vh;
+		overflow-y: auto;
 	}
 
 	.button {
