--- a/yx/国男大冒险/index.html
+++ b/yx/国男大冒险/index.html
@@ -292,6 +292,9 @@
 		background-image: linear-gradient(rgba(255, 255, 255, 0.09) 74%, rgba(0, 156, 238, 0.3));
 		position: relative;
 		overflow: auto;
+		display: flex;           /* 添加flex布局 */
+		justify-content: center; /* 水平居中 */
+		align-items: center;     /* 垂直居中 */
 	}
 
 	.title_button {
@@ -356,6 +359,8 @@
 		flex-direction: column;
 		align-items: center;
 		margin: 40px;
+		max-height: 90vh;        /* 防止内容过长 */
+		overflow-y: auto;        /* 内容过长时可滚动 */
 	}
 
 	.button {
