--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -106,7 +106,7 @@
 			},
 			{
 				id: 10,
-				content: '你抛弃重病女友，被街坊邻居唾弃，还因此臭名远扬，再也找不到女朋友，最终社会性死亡。',
+				content: '你抛弃重病女友，被街坊邻居唾弃，还因此臭名远扬，再也找不到对象，最终社会性死亡。',
 				btnList: [{ txt: '如果能重来...', lastId: 1 }]
 			},
 			{
