--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -206,7 +206,7 @@
 			},
 			{
 				id: 24,
-				content: '由于妻子和第三者在外长期同居，法院判她赔偿1.7万抚养费，还不够你调查费的五分之一，你当庭气死。',
+				content: '由于妻子和第三者在外长期同居，法院判她赔偿你1.7万抚养费，还不够调查费的五分之一，你当庭气死。',
 				link: [
 					{ str: '丈夫起诉第三者索赔精神损失费被驳回', src: 'https://www.baidu.com/s?wd=丈夫起诉第三者索赔精神损失费被驳回' },
 				],
