--- a/yx/index.html
+++ b/yx/index.html
@@ -143,7 +143,7 @@
     <!-- 页脚 -->
     <div class="footer">
         <div class="footer-disclaimer">
-            游戏仅供娱乐，请勿代入现实。
+            游戏仅供娱乐 请勿代入现实
         </div>
     </div>
 
