--- a/yx/index.html
+++ b/yx/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>嘲讽 - 恐怖游戏名录</title>
     <meta name="description" property="og:description" content="请关注公众号：嘲讽">
-    <meta name="keywords" content="恐怖游戏|中式恐怖|小游戏|成人小游戏|国男小游戏">
+    <meta name="keywords" content="恐怖游戏|中式恐怖|小游戏|国男小游戏">
     <style>
         body {
             margin: 0;
