--- a/yx/index.html
+++ b/yx/index.html
@@ -113,13 +113,13 @@
                     <div class="title">婚恋大冒险</div>
                 </a>
             </div>
-            <div class="game-card">
+            <div class="game-card" onclick="showAlert()">
                 <a href="#" target="_blank">
                     <img src="./img/国男大冒险2.png" alt="封面">
-                    <div class="title">敬请期待</div>
+                    <div class="title">集邮大冒险</div>
                 </a>
             </div>
-            <div class="game-card" onclick="showAlert()">
+            <div class="game-card">
                 <a href="#" target="_blank">
                     <img src="./img/婚恋大冒险2.png" alt="封面">
                     <div class="title">敬请期待</div>
