--- a/yx/index.html
+++ b/yx/index.html
@@ -116,7 +116,7 @@
             <div class="game-card" onclick="showAlert()">
                 <a href="#" target="_blank">
                     <img src="./img/国男大冒险2.png" alt="封面">
-                    <div class="title">集邮大冒险</div>
+                    <div class="title">异国集邮记</div>
                 </a>
             </div>
             <div class="game-card">
