--- a/yx/index.html
+++ b/yx/index.html
@@ -149,7 +149,7 @@
 
     <script>
         function showAlert() {
-            alert('正在开发中...');
+            alert('正在开发中... 游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，谁知刚下飞机就莫名触发支线任务，开始了集邮旅程。。');
         }
         
         var _hmt = _hmt || [];
