add google analytics

--- a/yx/index.html
+++ b/yx/index.html
@@ -98,6 +98,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQJEB2VL9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DHQJEB2VL9');
+</script>
 <body>
     <div class="mainlay">
         <div class="container">
