--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -8,7 +8,15 @@
 	<meta name="keywords" content="国男大冒险|婚恋大冒险|国男婚恋大冒险|国男大冒险婚恋版|国男模拟器|国男的一生|小游戏|成人小游戏|国男小游戏">
 	<title>嘲讽 - 婚恋大冒险</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQJEB2VL9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DHQJEB2VL9');
+</script>
 <body>
 	<div class="div_title">
 		<div style="position: absolute; right: 0; display: flex; height: 65px; gap: 10px; padding-right: 20px;">
