--- a/sm/wx-jq.html
+++ b/sm/wx-jq.html
@@ -32,7 +32,7 @@ p, li{line-height: 1.6;font-size:16px}
 <div class="main">
   <img src="https://open.weixin.qq.com/qr/code?username=cfqn66" width="268px" height="268px" />
   <h1>微信扫码进群</h1>
-  <h4>添加时请注明[来自恐怖游戏]</h1>
+  <h4>请私信进群暗号 恐怖游戏群</h1>
 </div>
 </body>
 </html>
