--- a/sm/wx-rh.html
+++ b/sm/wx-rh.html
@@ -36,7 +36,7 @@ p, li{line-height: 1.6;font-size:16px}
   <img src="https://open.weixin.qq.com/qr/code?username=cfqn66" width="268px" height="268px" />
   <h1>微信扫码入伙</h1>
   <br>
-  <h2>添加时请注明 网站入伙</h2>
+  <h2>请私信暗号 网站入伙</h2>
 </div>
 </body>
 </html>
