--- a/yx/index.html
+++ b/yx/index.html
@@ -170,7 +170,7 @@
 
     <script>
         function showAlert1() {
-            alert('正在开发中...  游戏构思：身为单亲家庭的孩子，车房彩礼压得你喘不过气，于是决定放弃冠姓权，做一个在家带娃的赘婿，谁知...');
+            alert('正在开发中...  游戏构思：身为单亲家庭的孩子，车房彩礼压得你喘不过气。于是你决定放弃冠姓权，做一个在家带娃的赘婿，谁知...');
         }
         function showAlert2() {
             alert('正在开发中...  游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，还为此准备了专业相机，谁知刚下飞机就莫名触发支线任务，开始了愉快的集邮旅程...');
