--- a/sm/wx-rh.html
+++ b/sm/wx-rh.html
@@ -32,7 +32,7 @@ p, li{line-height: 1.6;font-size:16px}
 <body>
 <div class="main">
   <h6>加入我们</h6>
-  <h5>我们是一个为爱发电的团队哦，欢迎加入我们一起建设网站呀。要求不高滴，以下技能只要简单掌握一项就可以哦：做图手绘、写代码、找案例、写故事或剧本、使用AI绘图写作、运营推广对接资源，能对网站发展提供其他帮助也欢迎你加入哦~<h5>
+  <h5>我们是一个为爱发电的团队哦，欢迎加入我们一起建设网站呀。要求不高滴，以下技能只要简单掌握一项就可以哦：游戏开发、做图手绘、写代码、写故事剧本、AI图文视频创作、运营推广、对接资源。能对网站发展提供其他帮助也欢迎加入哦~<h5>
   <img src="https://open.weixin.qq.com/qr/code?username=cfqn66" width="268px" height="268px" />
   <h1>微信扫码入伙</h1>
   <br>
