--- a/yx/index.html
+++ b/yx/index.html
@@ -149,7 +149,7 @@
                 <a href="../sm/wx-rh.html">入伙</a>
             </div>
             <div class="footer-bottom">
-                <a href="https://lanzoux.com/idoK62pq7plc">下载恐怖游戏本地版</a>
+                <a href="https://lanzoux.com/tp/idoK62pq7plc">下载恐怖游戏本地版</a>
             </div>
         </div>
     </div>
