--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -295,9 +295,9 @@
 		}
 	}
 	function share() {
-		// 可以根据需要实现分享功能
+		//可以根据需要实现分享功能
 		//复制下面文案到粘贴板
-		var shareText = '恐怖小游戏(请复制链接到浏览器打开):https://poet000.github.io/yx \n \n如果打不开，当前是流量就换wifi，当前是wifi就换流量。移动卡和移动宽带打不开是正常的，可以用电信联通广电试试。';
+		var shareText = '恐怖游戏官网：poet000.github.io \n\n请复制链接到浏览器打开，无法访问请尝试切换网络，或让朋友在官网下载本地版分享给你。';
 		navigator.clipboard.writeText(shareText);
 		alert('已复制以下内容到粘贴板: \n \n ' + shareText);
 	}
