--- a/yx/index.html
+++ b/yx/index.html
@@ -139,6 +139,20 @@
                 </a>
             </div>
 
+            <div class="game-card" onclick="showAlert3()">
+                <a href="#" target="_blank">
+                    <img src="./img/婚恋大冒险2.png" alt="封面">
+                    <div class="title">抵陷·底线</div>
+                </a>
+            </div>
+
+            <div class="game-card" onclick="showAlert4()">
+                <a href="#" target="_blank">
+                    <img src="./img/婚恋大冒险2.png" alt="封面">
+                    <div class="title">毛妹攻略</div>
+                </a>
+            </div>
+
         </div>
         
         <!-- 链接区域 -->
@@ -167,6 +181,12 @@
         }
         function showAlert2() {
             alert('正在开发中...  游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，还为此准备了专业相机，谁知刚下飞机就莫名触发支线任务，开始了愉快的集邮旅程...');
+        }
+        function showAlert3() {
+            alert('正在开发中...  游戏构思：你是一位货拉拉司机，你听说自己的案子作为经典案例被某电视剧〔据真实事件改编〕了，于是慕名观看...');
+        }
+        function showAlert4() {
+            alert('正在开发中...  游戏构思：一次偶然的机会，你了解到外国女孩的种种优点，于是出国踏上攻略征程...');
         }
         
         var _hmt = _hmt || [];
