--- a/yx/index.html
+++ b/yx/index.html
@@ -142,7 +142,7 @@
             <div class="game-card" onclick="showAlert3()">
                 <a href="#" target="_blank">
                     <img src="./img/婚恋大冒险2.png" alt="封面">
-                    <div class="title">抵陷·底线</div>
+                    <div class="title">底线·抵陷</div>
                 </a>
             </div>
 
@@ -183,7 +183,7 @@
             alert('正在开发中...  游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，还为此准备了专业相机，谁知刚下飞机就莫名触发支线任务，开始了愉快的集邮旅程...');
         }
         function showAlert3() {
-            alert('正在开发中...  游戏构思：你是一位货拉拉司机，你听说自己的案子作为经典案例被某电视剧〔据真实事件改编〕了，于是慕名观看...');
+            alert('正在开发中...  游戏构思：你是个货运司机，你听说自己的案子作为经典案例被某电视剧〔据真实事件改编〕，于是慕名观看，结果发现不仅改了，也确实编了...');
         }
         function showAlert4() {
             alert('正在开发中...  游戏构思：一次偶然的机会，你了解到外国女孩的种种优点，于是出国踏上攻略征程...');
