--- a/yx/index.html
+++ b/yx/index.html
@@ -128,28 +128,28 @@
             <div class="game-card" onclick="showAlert1()">
                 <a href="#" target="_blank">
                     <img src="./img/国男大冒险2.png" alt="封面">
-                    <div class="title">赘婿大冒险</div>
+                    <div class="title">赘婿大冒险🔒</div>
                 </a>
             </div>
             
             <div class="game-card" onclick="showAlert2()">
                 <a href="#" target="_blank">
                     <img src="./img/婚恋大冒险2.png" alt="封面">
-                    <div class="title">异国集邮记</div>
+                    <div class="title">异国集邮记🔒</div>
                 </a>
             </div>
 
             <div class="game-card" onclick="showAlert3()">
                 <a href="#" target="_blank">
                     <img src="./img/婚恋大冒险2.png" alt="封面">
-                    <div class="title">底线·抵陷</div>
+                    <div class="title">底线·抵陷🔒</div>
                 </a>
             </div>
 
             <div class="game-card" onclick="showAlert4()">
                 <a href="#" target="_blank">
                     <img src="./img/婚恋大冒险2.png" alt="封面">
-                    <div class="title">毛妹攻略</div>
+                    <div class="title">毛妹攻略🔒</div>
                 </a>
             </div>
 
