--- a/yx/index.html
+++ b/yx/index.html
@@ -177,16 +177,16 @@
 
     <script>
         function showAlert1() {
-            alert('正在开发中...  游戏构思：身为单亲家庭的孩子，车房彩礼压得你喘不过气。于是你决定放弃冠姓权，做一个在家带娃的赘婿，谁知...');
+            alert('【正在开发中】游戏构思：身为单亲家庭的孩子，车房彩礼压得你喘不过气。于是你决定放弃冠姓权，做一个在家带娃的赘婿，谁知...');
         }
         function showAlert2() {
-            alert('正在开发中...  游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，还为此准备了专业相机，谁知刚下飞机就莫名触发支线任务，开始了愉快的集邮旅程...');
+            alert('【正在开发中】游戏构思：你是个刚失业的金发老光棍，本想去棒国旅游散心，还为此准备了专业相机，谁知刚下飞机就莫名触发支线任务，开始了愉快的集邮旅程...');
         }
         function showAlert3() {
-            alert('正在开发中...  游戏构思：你是个货运司机，你听说自己的案子作为经典案例被某电视剧〔据真实事件改编〕，于是慕名观看，结果发现不仅改了，也确实编了...');
+            alert('【正在开发中】游戏构思：你是个货运司机，你听说自己的案子作为经典案例被某电视剧〔据真实事件改编〕，于是慕名观看，结果发现不仅改了，也确实编了...');
         }
         function showAlert4() {
-            alert('正在开发中...  游戏构思：一次偶然的机会，你了解到外国女孩的种种优点，于是出国踏上攻略征程...');
+            alert('【正在开发中】游戏构思：一次偶然的机会，你了解到外国女孩的种种优点，于是出国踏上攻略征程...');
         }
         
         var _hmt = _hmt || [];
