--- a/yx/index.html
+++ b/yx/index.html
@@ -163,7 +163,7 @@
                 <a href="../sm/wx-rh.html">入伙</a>
             </div>
             <div class="footer-bottom">
-                <a href="https://lanzoux.com/tp/idoK62pq7plc">下载本地版游戏</a>
+                <a href="https://lanzoux.com/tp/iFBKd2r091ej">下载本地版游戏</a>
             </div>
         </div>
     </div>
