--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -445,5 +445,7 @@
 		margin: 10px 0;
 	}
 </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
+     crossorigin="anonymous"></script>
 
 </html>
