--- a/index.html
+++ b/index.html
@@ -20,3 +20,5 @@
 		s.parentNode.insertBefore(hm, s);
 	})();
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
+     crossorigin="anonymous"></script>
