--- a/yx/婚恋大冒险/index.html
+++ b/yx/婚恋大冒险/index.html
@@ -52,7 +52,18 @@
 			</div>
 		</div>
 	</div>
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
+	crossorigin="anonymous"></script>
+<!-- footad -->
+<ins class="adsbygoogle"
+	style="display:block"
+	data-ad-client="ca-pub-5476907635092903"
+	data-ad-slot="4672051791"
+	data-ad-format="auto"
+	data-full-width-responsive="true"></ins>
+<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -445,7 +456,5 @@
 		margin: 10px 0;
 	}
 </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
-crossorigin="anonymous"></script>
 
 </html>
