--- a/yx/index.html
+++ b/yx/index.html
@@ -100,8 +100,6 @@
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHQJEB2VL9"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
-crossorigin="anonymous"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -199,6 +197,16 @@ crossorigin="anonymous"></script>
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <!-- footad -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-5476907635092903"
+data-ad-slot="4672051791"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 </body>
