--- a/yx/index.html
+++ b/yx/index.html
@@ -197,6 +197,8 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5476907635092903"
+        crossorigin="anonymous"></script>
     <!-- footad -->
 <ins class="adsbygoogle"
 style="display:block"
